fix margin on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,6 +12,7 @@ body {
         justify-content: center;
         align-items: center;
         height: 100vh;
+        background-image: linear-gradient(0deg, #d3e8ee 0%, #f3e5cf 75%);
     }
 
     &container {
